:lipstick: Update theme attributes

--- a/theme/base/src/main/res/values/colors.xml
+++ b/theme/base/src/main/res/values/colors.xml
@@ -1,12 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <attr name="colorPrimary" format="color" />
-    <attr name="colorSecondary" format="color" />
-    <attr name="colorTertiary" format="color" />
-    <attr name="colorBackground" format="color" />
-    <attr name="colorBackgroundVariant" format="color" />
+    <attr name="colorPrimaryVariant" format="color" />
     <attr name="colorOnPrimary" format="color" />
+
+    <attr name="colorSecondary" format="color" />
+    <attr name="colorSecondaryVariant" format="color" />
     <attr name="colorOnSecondary" format="color" />
-    <attr name="colorOnTertiary" format="color" />
+
+    <attr name="colorSurface" format="color" />
+    <attr name="colorOnSurface" format="color" />
+
+    <attr name="colorBackground" format="color" />
     <attr name="colorOnBackground" format="color" />
+
+    <attr name="colorError" format="color" />
+    <attr name="colorOnError" format="color" />
 </resources>
