--- a/theme/base/src/main/res/values/theme.xml
+++ b/theme/base/src/main/res/values/theme.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
 
-    <style name="PokemonParentTheme" parent="Theme.MaterialComponents.DayNight.DarkActionBar" />
+    <style name="PokemonParentTheme" parent="Theme.MaterialComponents" />
 
     <style name="PokemonBaseTheme" parent="PokemonParentTheme">
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
