:lipstick: Update player component to use attributes from base theme

--- a/component/player/src/main/res/drawable/background_player.xml
+++ b/component/player/src/main/res/drawable/background_player.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle">
 
     <gradient
-        android:angle="270"
+        android:angle="?attr/angleGradient"
         android:endColor="?attr/colorPrimary"
         android:startColor="?attr/colorPrimaryVariant" />
 
