--- a/component/player/src/main/res/values/styles.xml
+++ b/component/player/src/main/res/values/styles.xml
@@ -6,12 +6,12 @@
     </style>
 
     <style name="PlayerText.Title">
-        <item name="android:textSize">16sp</item>
+        <item name="android:textSize">?attr/textSizeSmall</item>
         <item name="android:textStyle">italic</item>
     </style>
 
     <style name="PlayerText.Subtitle">
-        <item name="android:textSize">20sp</item>
+        <item name="android:textSize">?attr/textSizeMedium</item>
         <item name="android:textStyle">bold</item>
     </style>
 
