--- a/theme/base/src/main/res/values/dimensions.xml
+++ b/theme/base/src/main/res/values/dimensions.xml
@@ -4,8 +4,13 @@
     <attr name="spacingMedium" format="dimension" />
     <attr name="spacingBig" format="dimension" />
 
+    <attr name="textSizeSmall" format="dimension" />
+    <attr name="textSizeMedium" format="dimension" />
+
     <attr name="radiusSmall" format="dimension" />
     <attr name="radiusMedium" format="dimension" />
 
     <attr name="sizeIcon" format="dimension" />
+
+    <attr name="angleGradient" format="integer" />
 </resources>
