:sparkles: Add player component implementation on MainActivity

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,4 +1,4 @@
 <resources>
 
-    <style name="Theme.PokeThemes" parent="PokemonBlueTheme" />
+    <style name="Theme.PokeThemes" parent="PokemonRedTheme" />
 </resources>
