--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,58 +5,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="?attr/colorBackground"
-    android:padding="24dp"
+    android:padding="?attr/spacingBig"
     tools:context=".MainActivity">
 
-    <ImageView
-        android:id="@+id/ivPoke"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:src="?attr/pokeImage"
-        app:layout_constraintBottom_toTopOf="@+id/tvPoke"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/tvPoke"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:text="Hello World!"
-        app:layout_constrainedWidth="true"
-        app:layout_constraintBottom_toTopOf="@+id/space"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ivPoke" />
-
-    <Space
-        android:id="@+id/space"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/btPokeOneOne"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvPoke" />
-
-    <Button
-        android:id="@+id/btPokeOneOne"
+    <com.guichristovao.poke_themes.player.PlayerView
+        android:id="@+id/player"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Primary Button"
-        app:layout_constraintBottom_toTopOf="@+id/btPokeTwo"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/space" />
-
-    <Button
-        android:id="@+id/btPokeTwo"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="Secondary Button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btPokeOneOne" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
