:bug: Fix player component image aspect ratio

--- a/component/player/src/main/res/layout/player.xml
+++ b/component/player/src/main/res/layout/player.xml
@@ -11,11 +11,12 @@
     <ImageView
         android:id="@+id/ivPlayer"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:adjustViewBounds="true"
         android:background="?attr/colorBackground"
         android:src="?attr/pokeImage"
         app:layout_constraintBottom_toTopOf="@+id/tvPlayerTitle"
+        app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
